added keywords to meta

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
       name="description"
       content="Eduardo 'Eddy' Verde's Personal Site. Learn about who Eddy is."
     />
+    <meta
+    name="keywords"
+    content="Eddy Verde, Verde, Eduardo 'Eddy' Verde, Eduardo Verde, Software, Software Engineer, Websites, Freelance, Fullstack, Full-stack, developer, computers, programming"
+  ></meta>
     <meta name="author" content="Eduardo 'Eddy' Verde" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
