made updates for SEOs. Also updated favico

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -11,12 +15,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Eduardo 'Eddy' Verde's Personal Site. Learn about who Eddy is."
+      content="Eduardo 'Eddy' Verde's Personal Site. Learn about who Eddy Verde is. Freelancer, Software Engineer, Full-Stack Engineer, DevOps Engineer, Agile Trained, Problem Solver"
     />
     <meta
     name="keywords"
-    content="Eddy Verde, Verde, Eduardo 'Eddy' Verde, Eduardo Verde, Software, Software Engineer, Websites, Freelance, Fullstack, Full-stack, developer, computers, programming"
+    content="Eddy Verde, Verde, Eduardo 'Eddy' Verde, Eduardo Verde, Software, Software Engineer, Websites, freelance, Fullstack, Full-stack, developer, python, javascript, java, devops, jenkins, aws, amazon,computers, programming, security, attain, adapt forward, orlando, fl, florida, 32817, 407 "
   ></meta>
+   <meta name="title" content="Eduardo 'Eddy' Verde's Personal Site. Learn about who Eddy Verde is.">
     <meta name="author" content="Eduardo 'Eddy' Verde" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -42,7 +47,6 @@
     <title>Eduardo "Eddy" Verde | Software Engineer</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
