last set of SEO until jnroofing is done

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
 
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="mobile-web-app-capable" content="yes" />
@@ -19,7 +19,7 @@
     />
     <meta
     name="keywords"
-    content="Eddy Verde, Verde, Eduardo 'Eddy' Verde, Eduardo Verde, Software, Software Engineer, Websites, freelance, Fullstack, Full-stack, developer, python, javascript, java, devops, jenkins, aws, amazon,computers, programming, security, attain, adapt forward, orlando, fl, florida, 32817, 407 "
+    content="Eddy Verde, Verde, Eduardo 'Eddy' Verde, Eduardo Verde, Software, Software Engineer, Websites, freelance, Fullstack, Full-stack, developer, python, javascript, java, devops, jenkins, aws, computers, programming, security, orlando, fl, florida,"
   ></meta>
    <meta name="title" content="Eduardo 'Eddy' Verde's Personal Site. Learn about who Eddy Verde is.">
     <meta name="author" content="Eduardo 'Eddy' Verde" />
